revert unnecessary changes
Signed-off-by: Neeharika-Sompalli <neeharika.sompalli@swirldslabs.com>